[package]
name = "ezsp"
description = "Ember ZNet Serial Protocol"
license = "MIT"
repository = "https://github.com/PaulmannLighting/ezsp"
keywords = ["Ember", "ZNet", "Serial"]
categories = ["hardware-support", "network-programming"]
documentation = "https://www.silabs.com/documents/public/user-guides/ug100-ezsp-reference-guide.pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
rw-exact-ext = { git = "https://github.com/PaulmannLighting/rw-exact-ext.git", version = "0.1", features = ["num-traits", "heapless"] }
serialport = { version = "4.3", default-features = false }
siliconlabs = { git = "ssh://git@github.com/PaulmannLighting/siliconlabs.git", version = "0.1", features = ["le-stream"] }
ashv2 = { git = "https://github.com/PaulmannLighting/ashv2.git", version = "0.1", optional = true }
le-stream = { git = "https://github.com/PaulmannLighting/le-stream.git", version = "0.1", features = ["derive", "heapless"] }
log = "0.4"
heapless = "0.8"
itertools = "0.13"

[features]
ashv2 = ["dep:ashv2"]
