[package]
name = "ezsp"
description = "Ember ZNet Serial Protocol"
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/ezsp"
keywords = ["Ember", "ZNet", "Serial", "Zigbee"]
categories = ["hardware-support", "network-programming"]
documentation = "https://docs.rs/ezsp"
version = "1.6.0"
edition = "2024"
exclude = [".gitignore"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
aps = { version = "0.1.0", path = "../apis-saltans/aps", optional = true }
ashv2 = { version = "2.0", path = "../ashv2", optional = true }
bitflags = "2.10"
enum-iterator = "2.3"
heapless = "0.9"
le-stream = { version = "6", features = ["derive", "macaddr", "heapless"] }
log = "0.4"
macaddr = "1.0"
num-derive = "0.4"
num-traits = "0.2"
rand = { version = "0.10.0-rc.5", optional = true }
repr-discriminant = { version = "3", features = ["derive"] }
semver = { version = "1.0", optional = true }
silizium = { version = "1.0", path = "../silizium", features = ["le-stream"] }
tokio = { version = "1.48", optional = true }
zcl = { version = "0.1.0", path = "../apis-saltans/zcl", optional = true }
zdp = { version = "0.1.0", path = "../apis-saltans/zdp", optional = true }
zigbee-nwk = { version = "0.1.0", path = "../apis-saltans/nwk", optional = true }
zigbee = { version = "0.1.0", path = "../apis-saltans/zigbee", optional = true }
tokio-mpmc = { version = "0.2.4", optional = true }

[features]
ashv2 = ["dep:ashv2", "tokio/rt", "tokio/time", "tokio/sync"]
semver = ["dep:semver"]
zigbee = ["dep:zigbee", "dep:zigbee-nwk", "dep:rand", "dep:tokio-mpmc", "dep:aps", "dep:zcl", "dep:zdp"]

[profile.release]
opt-level = 3
strip = "symbols"
panic = "abort"

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
keyword_idents = { level = "warn", priority = -1 }
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unsafe_code = "warn"
unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_imports = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
for_loops_over_fallibles = "warn"
redundant_lifetimes = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -90 }
nursery = { level = "warn", priority = -95 }
perf = { level = "warn", priority = -95 }
suspicious = { level = "warn", priority = -95 }
complexity = { level = "warn", priority = -100 }
cargo = { level = "warn", priority = -95 }
all = { level = "warn", priority = -98 }

incompatible_msrv = "warn"
as_ptr_cast_mut = "warn"
clear_with_drain = "warn"
collection_is_never_read = "warn"
debug_assert_with_mut_call = "warn"
deref_by_slicing = "warn"
empty_enum_variants_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
mem_forget = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
panic_in_result_fn = "warn"
path_buf_push_overwrite = "warn"
unwrap_in_result = "warn"
verbose_file_reads = "warn"
useless_let_if_seq = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
string_add = "warn"
string_slice = "warn"
implicit_clone = "warn"
trailing_empty_array = "warn"
transmute_undefined_repr = "warn"
unnecessary_self_imports = "warn"
undocumented_unsafe_blocks = "warn"
